# Education-Data-n-Trends

./: .gitignore  EDA_results.md  ML_results.md  README.md  configurations.yaml  pyproject.toml  recommendations_page.md  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
app_files/: app.py  data_loader.py  init folder for github  organizer_for_py_files.ipynb
mysql_scripts/: attempts_to_concat_data_unsuccessful.sql  changes_to_tables.sql  creating_tables.sql  fill_year_table.sql
usable_notebooks/: EDA_countries.ipynb  fillingvalues.ipynb  filtering_out_countries.ipynb  full_analytics.ipynb  full_country_data.csv  grouping_variables.ipynb  grouping_variables2.ipynb  statistical_analysis_countries.csv
working_notebooks/: Untitled.ipynb  fillingvalues.ipynb  handling_SYB67_245_202411.ipynb  handling_SYB67_309_202411.ipynb  handling_SYB67_319_202411.ipynb  handling_SYB67_323_202411.ipynb  handling_UNdata_Export_20241213_133629943.ipynb  handling_UNdata_Export_20241213_133644616.ipynb  handling_UNdata_Export_20241213_133700618.ipynb  handling_UNdata_Export_20241213_133715390.ipynb  handling_UNdata_Export_20241213_133719900.ipynb  handling_UNdata_Export_20241213_135427611.ipynb  handling_UNdata_Export_20241213_135440652.ipynb  handling_UNdata_Export_20241213_135445396.ipynb  handling_UNdata_Export_20241213_135453818.ipynb  handling_UNdata_Export_20241213_135502548.ipynb  handling_UNdata_Export_20241213_140228086.ipynb  handling_UNdata_Export_20241213_140703208.ipynb  handling_UNdata_Export_20241213_140708283.ipynb  init_sql_db.ipynb  seperating_years.ipynb  (+1 more)
(+95 files in other folders)
