[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "missingno>=0.5.2",
    "mysql-connector-python>=9.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pymysql>=1.1.1",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
]
